display previously added providers wip + move ViewModels into a folder structure matching the Views folder

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/HealthCheck/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/HealthCheck/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model HealthCheckViewModel
+﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.HealthCheck.HealthCheckViewModel
 
 @{
     ViewBag.Title = "Health check";
