--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddProviderViewModel
+﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.Providers.AddProviderViewModel
 
 @{
     ViewBag.Title = "Confirm training provider";
