--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
@@ -1,4 +1,4 @@
-@model AddedProviderViewModel
+@model SFA.DAS.ProviderRelationships.Web.ViewModels.Providers.AddedProviderViewModel
 
 @{
     ViewBag.Title = "Training provider added";
