--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
@@ -1,4 +1,4 @@
-@model AlreadyAddedProviderViewModel
+@model SFA.DAS.ProviderRelationships.Web.ViewModels.Providers.AlreadyAddedProviderViewModel
 
 @{
     ViewBag.Title = "Training provider already added";
