--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model SearchProvidersViewModel
+﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.Providers.SearchProvidersViewModel
 
 @{
     ViewBag.Title = "Search for a training provider";
