--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_ValidationSummary.cshtml
@@ -3,7 +3,7 @@
 @if (!Model.IsValid)
 {
     <div aria-labelledby="error-summary-title" class="govuk-error-summary" data-module="error-summary" role="alert" tabindex="-1">
-        <h2 class="govuk-error-summary__title" id="error-summary-title">
+        <h2 class="govuk-error-summary__title  govuk-!-margin-bottom-0" id="error-summary-title">
             There are errors on this page that need your attention
         </h2>
         <div class="govuk-error-summary__body">
