Styled add page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -11,10 +11,10 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Confirm training provider</h1>
-        <p class="govuk-body govuk-!-margin-bottom-7">UK Provider Reference Number <span class="govuk-!-font-weight-bold">'@Model.Provider.Ukprn'</span> matches:</p>
+        <p class="govuk-body govuk-!-margin-bottom-5">UK Provider Reference Number <span class="govuk-!-font-weight-bold">'@Model.Provider.Ukprn'</span> matches:</p>
         <h2 class="govuk-heading-l">
             @Model.Provider.Name
-            <span class="govuk-caption-m govuk-!-font-weight-bold">UKPRN @Model.Provider.Ukprn</span>
+            <span class="govuk-caption-m govuk-!-font-weight-bold govuk-!-margin-bottom-8">UKPRN @Model.Provider.Ukprn</span>
         </h2>
         @using (Html.BeginForm())
         {
@@ -22,7 +22,7 @@
             @Html.HiddenFor(m => m.Ukprn)
             <div class="govuk-form-group @(Html.IsValid(m => m.Choice) ? "" : " govuk-form-group--error")">
                 <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-margin-bottom-0">
                         <h1 class="govuk-fieldset__heading">
                             Is this the training provider you would like to set permissions for?
                         </h1>
