Styled added page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
@@ -20,7 +20,7 @@
             @Html.HiddenFor(m => m.AccountProviderId)
             <div class="govuk-form-group @(Html.IsValid(m => m.Choice) ? "" : " govuk-form-group--error")">
                 <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-margin-bottom-0">
                         <h1 class="govuk-fieldset__heading">
                             What's next?
                         </h1>
