--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -20,30 +20,34 @@
         <h1 class="govuk-heading-xl">Training provider permissions</h1>
         <p class="govuk-body">Set permissions for what you want training providers to do on your behalf. You can select from those you've previously worked with, or find a new one.</p>
         <a class="govuk-button govuk-button--start" href="@Url.Action("Search", "Providers")" role="button">Add a new training provider</a>
-        <h2>Your training providers</h2>
+    </div>
+</div>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <h2 class="govuk-!-margin-top-9">Your training providers</h2>
         @if (!Model.AccountProviders.Any())
         {
-            <p>No training provider permissions set</p>
+            <p class="govuk-body">No training provider permissions set</p>
         }
         else
         {
             <table class="govuk-table govuk-!-font-size-16">
-                <thead>
-                    <tr>
+                <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
                         <th class="govuk-table__header">Training providers</th>
                         <th class="govuk-table__header">Permissions</th>
                         <th class="govuk-table__header"></th>
                     </tr>
                 </thead>
-                <tbody>
-                @foreach (var accountProvider in Model.AccountProviders)
-                {
-                    <tr>
-                        <td class="govuk-table__cell">@accountProvider.Provider.Name</td>
-                        <td class="govuk-table__cell">No permissions set</td>
-                        <td class="govuk-table__cell"><a href="@Url.Action("Index", "Permissions")">Set permissions</a></td>
-                    </tr>
-                }
+                <tbody class="govuk-table__body">
+                    @foreach (var accountProvider in Model.AccountProviders)
+                    {
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell">@accountProvider.Provider.Name</td>
+                            <td class="govuk-table__cell">No permissions set</td>
+                            <td class="govuk-table__cell"><a href="@Url.Action("Index", "Permissions")">Set permissions</a></td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         }
