--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
@@ -6,7 +6,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" data-module="success-summary" role="alert" tabindex="-1">
+        <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" role="alert" tabindex="-1">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="success-summary-title">
                 Training provider added
             </h1>
