--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
@@ -10,7 +10,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div aria-labelledby="info-summary-title" class="govuk-info-summary" data-module="info-summary" role="alert" tabindex="-1">
+        <div aria-labelledby="info-summary-title" class="govuk-info-summary" role="alert" tabindex="-1">
             <h1 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="info-summary-title">
                 Training provider already added
             </h1>
