rename AccountProviderDto => AddedAccountProviderDto + rename GetAddedProviderQuery => GetAddedAccountProviderQuery (so that dto and query names match)

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Added.cshtml
@@ -11,7 +11,7 @@
                 Training provider added
             </h1>
             <div class="govuk-success-summary__body">
-                <p>You've successfully added <span class="govuk-!-font-weight-bold">@Model.AccountProvider.Provider.Name</span></p>
+                <p>You've successfully added <span class="govuk-!-font-weight-bold">@Model.AddedAccountProvider.Provider.Name</span></p>
             </div>
         </div>
         @using (Html.BeginForm())
