Added govuk-frontend GDS files as IE11 and Edge polyfills required

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
             <main class="govuk-main-wrapper " id="main-content" role="main">
                 @RenderBody()
             </main>
-        </div> 
+        </div>
         <footer class="govuk-footer " role="contentinfo">
             <div class="govuk-width-container ">
                 <div class="govuk-footer__meta">
@@ -141,6 +141,7 @@
                 </div>
             </div>
         </footer>
+        <script src="/Content/lib/govuk-frontend/dist/govuk-frontend-2.0.0.min.js"></script>
         <script src="/Content/lib/jquery/dist/jquery.min.js"></script>
         <script src="/Content/js/application.js"></script>
         @*<script>
