--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Home/Index.cshtml
@@ -30,14 +30,14 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <h2 class="govuk-!-margin-top-9">Your training providers</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-top-9">Your training providers</h2>
         @if (!Model.AccountProviders.Any())
         {
             <p class="govuk-body">No training provider permissions set</p>
         }
         else
         {
-            <table class="govuk-table govuk-!-font-size-16">
+            <table class="govuk-table govuk-!-font-size-19">
                 <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                         <th class="govuk-table__header">Training providers</th>
