Moved HomeController Index action to ProvidersController

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/Add.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Confirm training provider";
 }
 
-@section breadcrumb {
+@section breadcrumb
+{
     <a class="govuk-back-link" href="@Url.Action("Search", "Providers" )">Back</a>
 }
 
