--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Providers/AlreadyAdded.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Training provider already added";
 }
 
-@section breadcrumb {
+@section breadcrumb
+{
     <a class="govuk-back-link" href="@Url.Action("Search", "Providers" )">Back</a>
 }
 
