--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -1,7 +1,8 @@
+@using SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.GetAccountProviderViewModel
 
 @{
-    ViewBag.Title = @Model.AccountProvider.ProviderName;
+    ViewBag.Title = Model.AccountProvider.ProviderName;
 }
 
 @section breadcrumb
@@ -34,7 +35,7 @@
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell">@accountLegalEntity.Name</td>
                         <td class="govuk-table__cell">No permissions set</td>
-                        <td class="govuk-table__cell"><a href="@Url.Action("Index", "Permissions", new { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a></td>
+                        <td class="govuk-table__cell"><a href="@Url.Action("Get", "AccountProviderLegalEntities", new GetAccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a></td>
                     </tr>
                 }
             </tbody>
