Added confirm permissions page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Get.cshtml
@@ -13,6 +13,8 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Set permissions</h1>
+    </div>
+    <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">Set permissions for @Model.AccountProvider.ProviderName to do tasks on behalf of @Model.AccountLegalEntity.Name?</p>
     </div>
 </div>
