--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -11,11 +11,13 @@
 }
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
             @Model.AccountProvider.ProviderName
             <span class="govuk-caption-m govuk-!-font-weight-bold govuk-!-margin-bottom-8">UKPRN @Model.AccountProvider.ProviderUkprn</span>
         </h1>
+    </div>
+    <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">Set permissions for a single organisation, or set the same permissions for all your organisations at the same time.</p>
     </div>
 </div>
