--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -13,8 +13,10 @@
     <div class="govuk-grid-column-two-thirds">
         @Html.Partial("_ValidationSummary", ViewData.ModelState)
     </div>
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Search for a training provider</h1>
+    </div>
+    <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">Search for a training provider via a UKPRN.</p>
         @using (Html.BeginForm())
         {
