--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Update.cshtml
@@ -1,4 +1,4 @@
-@using SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities
+@using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.UpdateAccountProviderLegalEntityViewModel
 
 @{
