--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -1,17 +1,20 @@
-@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AddedAccountProviderViewModel
+@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.UpdatedAccountProviderLegalEntityViewModel
 
 @{
-    ViewBag.Title = "Training provider added";
+    ViewBag.Title = "Permissions updated";
 }
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" role="alert" tabindex="-1">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="success-summary-title">
-                Training provider added
+                Permissions updated
             </h1>
             <div class="govuk-success-summary__body">
-                <p>You've successfully added <span class="govuk-!-font-weight-bold">@Model.AccountProvider.ProviderName</span></p>
+                <p>
+                    You've successfully updated permissions for <span class="govuk-!-font-weight-bold">_</span><br/>
+                    This training provider will receive notification shortly.
+                </p>
             </div>
         </div>
         @using (Html.BeginForm())
@@ -31,19 +34,19 @@
                         <div class="govuk-radios__item">
                             @Html.RadioButtonFor(m => m.Choice, "SetPermissions", new { id = "choice-1", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="choice-1">
-                                Set permissions for this training provider
+                                Set permissions for another organisation
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Choice, "AddTrainingProvider", new { id = "choice-2", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Choice, "GoToHomepage", new { id = "choice-2", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="choice-2">
-                                Add another training provider
+                                Go to the Homepage
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Choice, "GoToHomepage", new { id = "choice-3", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Choice, "AddTrainingProvider", new { id = "choice-3", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="choice-3">
-                                Go back to Homepage
+                                Add another training provider
                             </label>
                         </div>
                     </div>
